duniverse/menhirLib.20200211/test/static/bad/inline-minimal-cycle.mly
%start<int> a
%%

a: b {}
%inline b: b {}
