duniverse/menhirLib.20200211/test/static/bad/inline-minimal-cycle.exp
File "inline-minimal-cycle.mly", line 5, characters 8-9:
Error: there is a cycle of %inline nonterminal symbols:
  b refers to itself.
